SeeSpotHelp/SeeSpotHelp/App/style/_page.scss
html {
  max-width: 800px;
  margin: 0 auto;
  height: calc(100%);
  background: $html-bg-color;
  position: relative;
}

body {
  background-color: $body-bg-color;
  height: calc(100%);
  outline: none;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
}

.page {
  margin-right: 0px;
  margin-left: 0px;
}

.info-top {
  border-top: 0px solid $info-top-border-color;
  border-left: 0px solid $info-top-border-color;
  border-right: 0px solid $info-top-border-color;

  @include border-top-radius(0px);
  background-color: $info-top-bg-color;
  color: $info-top-color;
  padding: 15px;
  a {
    color: $almostWhite;
    font-decoration: underline !important;
  }
}

// .animal-info-bar {
// 	@extend .info-top;
// 	background-color: $animal-info-top-bg-color;
// }
//
// .group-info-bar {
// 	@extend .info-top;
// 	background-color: $group-info-top-bg-color;
// }

.info-top-no-tabs {
  @extend .info-top;
  border-bottom: 1px solid $info-top-border-color;
}

.nav-tabs {
  background-color: $info-top-bg-color;
  border-right: 0px solid $info-top-border-color;
  border-left: 0px solid $info-top-border-color;
  border-bottom: 1px solid $info-top-border-color;
  padding-left: 15px;

  // I'm not sure why but there is an ultra fine line showing up on the top, interuppting the flow
  // from the info bar to the tabs, this seems to fix it.
  margin-top: -1px;
}

.tab-content {
  background-color: white;
  margin: 0px;
}

.tabs-area {
  li a {
    background-color: $inactive-tab-bg-color;
    @include border-top-radius(10px);
    border-width: 2px 2px 1px 2px;
    border-color: $info-top-border-color;
    height: 48px;
    outline: none;
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  }

  li.active {
    a {
    background-color: $page-bg-color;
    border-width: 2px 2px 0px 2px;
    margin-bottom: -1px;
    border-color: $info-top-border-color;
    outline: none;
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
    }
    a:hover {
      border-width: 2px 2px 0px 2px;
    }
    a:focus {
      border-width: 2px 2px 0px 2px;
      margin-bottom: -1px;
      border-color: $info-top-border-color;
    }
  }
}

.tab {
  background-color: $page-bg-color !important;
}

.large-tab-icon {
  font-size: 20px;
}

.small-tab-icon {
  font-size: 15px;
}

.actions-bar {
  max-width: 600px;
  margin: 5px 5px !important;
}

.glyphicon-camera {
  color: white;
  font-size: 20px;
}

.glyphicon-edit, .glyphicon-remove-circle {
  color: rgba(214, 214, 214, .8);
}

.header-bar {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  background-color: $header-bar-bg-color;
  padding: 20px;
}

#wrapper {
  min-height:100%;
  position:relative;
}

#content {
  background-color: $page-bg-color;
  padding-bottom:60px; /* Height of the footer element */
}

#footer {
  width:100%;
  height:50px;
  position:absolute;
  text-align: center;
  bottom:0;
  left:0;
  padding: 15px;
  margin-top: 10px;
  background-color: $footer-bg-color;
  color: $footer-color;
}

.login-page {
  padding: 100px 5px 35px 5px;
  text-align: center;
}

.loader {
  background-color: rgba(0, 0, 0, .5);
}

.info-bar-back {
  cursor: pointer;
  font-size: 11px;
  float: left;
  position: absolute;
  top: 52;
  left: 4;
  color: transparentize($almostWhite, .5);
}

.head-shot {
  height: 80px;
}

.spinner {
  padding: 5px;
}

